samples/_failures_safe/1761392549_f92ffb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6d4dd76.c: In function ‘main’:
./samples/SAFE/__tmp_f6d4dd76.c:123:12: error: missing terminating " character
  123 |     printf("Enter log entries
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f6d4dd76.c:123:5: error: expected expression at end of input
  123 |     printf("Enter log entries
      |     ^~~~~~
./samples/SAFE/__tmp_f6d4dd76.c:123:5: error: expected declaration or statement at end of input
